--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO_URI = mongodb+srv://ubhangare32:Uday123@cluster0.keyiz.mongodb.net/
 MONGO_DATABASE = day1
+
+MAIL_USER = verda.parker66@ethereal.email
+MAIL_PASS = KzeQ6ZbjnFEV3d18Y7
