--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ MONGO_DATABASE = day1
 
 MAIL_USER = verda.parker66@ethereal.email
 MAIL_PASS = KzeQ6ZbjnFEV3d18Y7
+
+PORT= 3000
+
+JWT_SECRET = Uday
